# newsbot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: data-cron.yml  news-freshness-watchdog.yml  news-refresh.yml  pages.yml  scanner-freshness-watchdog.yml  scanner-schedule-v2.yml  scanner-schedule.yml  vercel-refresh.yml
docs/: vercel-ops.md
public/data/scanner/: derivatives-top100-15m.json  derivatives-top100-1h.json  derivatives-top100-4h.json  derivatives-top100-5m.json  manifest.json  momentum-top100-15m.json  momentum-top100-1h.json  momentum-top100-4h.json  momentum-top100-5m.json  movers-top100-15m.json  movers-top100-1h.json  movers-top100-4h.json  movers-top100-5m.json  multi-timeframe-top100-15m.json  multi-timeframe-top100-1h.json  (+34 more)
scripts/: _python.ps1  build-static.ps1  build-static.sh  install-local.ps1  install-local.sh  run-local.ps1  run-local.sh  test-local.ps1  update_data.py  validate_site_dist.py  vercel_build.py
src/newsbot/: __init__.py  categories.py  config.py  contracts.py  db.py  markets_builder.py  models.py  schemas.py  site_builder.py  source_registry.py  text_tools.py
src/newsbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_app_integration.py  test_classifier.py  test_dedupe.py  test_markets_builder.py  test_query.py  test_scanner.py  test_site_builder.py  test_source_registry.py  test_source_runtime_guards.py  test_telegram_adapter.py  test_thumbnails.py  test_update_data.py  test_url_tools.py
(+1382 files in other folders)
